fix some bugs on mobile devices

--- a/css/voronoi-map.css
+++ b/css/voronoi-map.css
@@ -121,7 +121,6 @@ p {
 .show {
   padding-bottom: 10px;
   display: block;
-  display: none;
 }
 
 .content {
